# c

./: .codedocs  CMakeLists.txt  Makefile  README.md
.github/workflows/: coverity.yml
doc/: CMakeLists.txt  Doxyfile.in  directory_structure.md
include/Clearning/: hello_world.h  linked_list.h
src/: factorial.c  factorial.cpp  hello_world.c  hello_world.cpp  linked_list.c  main.c
test/: CMakeLists.txt  factorial_test.c  hello_world_test.cpp  test_runner.c
